fixes too narrow line height on konzept side nav

--- a/app/assets/stylesheets/pages/konzept.scss
+++ b/app/assets/stylesheets/pages/konzept.scss
@@ -22,6 +22,7 @@
         margin-bottom: 10px;
         font-weight: bold;
         color: #C27410;
+        line-height: 18px;
         
         &.active {
           color: #2e4672;
